--- a/HelloForm/WebContent/Hello.html
+++ b/HelloForm/WebContent/Hello.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <body>
-<form action="HelloForm" method="GET">
+<form action="HelloForm" method="POST">
 First Name: <input type="text" name="first_name">
 <br />
 Last Name: <input type="text" name="last_name" />
